--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,9 @@ body {
   padding-top: 70px;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+.gallery a:hover {
+  text-decoration: none;
+}
+.gallery .caption {
+  height: 40px;
+}
